// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> with logged in should render correctly 1`] = `
<header
  className="Header"
  data-testid="Header"
>
  <div
    className="content-container"
  >
    <div
      className="sm:flex items-center text-center sm:text-left"
    >
      <div
        className="flex-grow flex justify-center sm:justify-start"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="Resource Rank Logo"
            height="50"
            src="/img/logo.svg"
            width="50"
          />
        </a>
      </div>
      <div
        className="NavItem NavLink"
        data-testid="ActiveLink"
      >
        <a
          className=""
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="NavItem"
        data-testid="TopicsNavItem"
      >
        <div
          className="NavLink"
          data-testid="ActiveLink"
        >
          <a
            className=""
            href="/topics"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Topics
          </a>
        </div>
      </div>
      <div
        className="NavItem"
      >
        <button
          className="btn btn-primary"
          data-testid="LoadingButton"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<Header /> with not logged in should render correctly 1`] = `
<header
  className="Header"
  data-testid="Header"
>
  <div
    className="content-container"
  >
    <div
      className="sm:flex items-center text-center sm:text-left"
    >
      <div
        className="flex-grow flex justify-center sm:justify-start"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="Resource Rank Logo"
            height="50"
            src="/img/logo.svg"
            width="50"
          />
        </a>
      </div>
      <div
        className="NavItem NavLink"
        data-testid="ActiveLink"
      >
        <a
          className=""
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="NavItem"
        data-testid="TopicsNavItem"
      >
        <div
          className="NavLink"
          data-testid="ActiveLink"
        >
          <a
            className=""
            href="/topics"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Topics
          </a>
        </div>
      </div>
      <div
        className="NavItem"
      >
        <button
          className="btn btn-primary"
          data-testid="LoadingButton"
          onClick={[Function]}
        >
          Login
        </button>
      </div>
    </div>
  </div>
</header>
`;
